projectv02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectv02-service
spec:
  type: NodePort
  selector:
    app: projectv02
  ports:
    - name: http
      nodePort: 30081
      protocol: TCP
      port: 1234
      targetPort: 3000
