projectv02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prov2-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: projectv02-service
            port:
              number: 2345
